<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">kzTorch</string>
    <string name="qs_tile_title">Torch</string>

    <string name="general">General</string>
    <string name="root_status_true">Root access granted!</string>
    <string name="root_status_false">You either do not have root access or denied the request. In order to use torch, you must have root access.</string>
    <string name="set_level">Set the level of the torch</string>
    <string name="warning">Warning!\nUsing the torch for long times may harm your device! Always be aware of that!</string>

    <string name="about">About</string>
    <string name="developer">Developer</string>
    <string name="support">Support</string>
    <string name="support_summary">Need help? Ask for help on XDA Forums thread. Click to go there!</string>
    <string name="disable_ads">Disable full-screen ads</string>
    <string name="disable_ads_summary">I don\'t care about the developer. Just give me an ad-free app!</string>
    <string name="ad_disabled_warning">Full-screen ads are now disabled. However, though you won\'t anymore see it on each click, only one full-screen ad will be shown at the start of the app.</string>
    <string name="pref_libs_used">Open Source Libraries: \n* Libsuperuser - Chainfire\n  - https://github.com/Chainfire/libsuperuser\n* android-seekbar-preference - gmazzo\n  - https://github.com/gmazzo/android-seekbar-preference</string>
    <string name="notification_on_title">kzTorch is on</string>
    <string name="notification_on_content">Warning! If you keep the torch on for long time, your device might get damaged. Level: </string>
    <string name="notification_action_turn_off">Turn off</string>
    <string name="devSupport">Support the developer</string>
    <string name="donate">Donate</string>
    <string name="donate_summary">Help me to buy a cup of tea\nberkantk3@gmail.com</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="pref_prevent_when_locked_title">Prevent it to turn on when locked</string>
    <string name="pref_prevent_when_locked_summary">Requires user to unlock the device to proceed</string>
</resources>
